src/index.css
/* Prevent horizontal overflow */
body, html {
  overflow-x: hidden;
  max-width: 100vw;
}

:root {
  overflow-x: hidden;
  max-width: 100vw;
}

/* :root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

#content {
  min-height: 100vh;
  min-width: 100vw;
}

.card-hover .overlay {
  display: none;
}

.card-hover:hover .overlay {
  display: block;
  background-color: #e2e2d4;
}

.hidden-link:hover {
  font-weight: bolder;
  box-shadow: 4px;
  text-decoration: underline;
}

.hidden-button {
  padding: 2px;
}

.hidden-button:hover {
  padding: 0px;
}

.card-text {
  font-size: small;
}

#nf-wrap {
  min-width: 100%;
}

#non-footer {
  padding-bottom: 80px;
}

#footer {
  position: relative;
  clear: both;
  margin-top: -80px;
  height: 80px;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
} */

